--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/src/assets/logo3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="stylesheet" href="/index.css" />
+    <title>CodeServ</title>
   </head>
   <body>
-    <div id="root"></div>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root">
+      <div class="loaderdiv">
+        <!-- Loading animation can be uncommented when needed -->
+        
+        <div class="waviy">
+          <span style="--i: 1">C</span>
+          <span style="--i: 2">O</span>
+          <span style="--i: 3">D</span>
+          <span style="--i: 4">E</span>
+          <span style="--i: 5">S</span>
+          <span style="--i: 6">E</span>
+          <span style="--i: 7">R</span>
+          <span style="--i: 8">V</span>
+        </div>
+       
+      </div>
+    </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
